Update CodeGenerator.java